--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Copyright (C) 2010-2013 Ian Moore (imoore76 at yahoo dot com) -->
 <head>
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
 	<meta http-equiv="Expires" content="0"/>
 	<meta http-equiv="Cache-Control" content ="no-cache"/>
@@ -26,8 +26,8 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css"/>
 
     <!-- External or jQuery related scripts -->
-    <script type="text/javascript" src="js/jquery-1.10.2-min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.10.3-min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui-1.11.4.min.js"></script>
 	<script type="text/javascript" src="js/jquery.tipped-2.1b.min.js"></script>
 	<script type="text/javascript" src="js/jquery.scrollTo-min.js"></script>
 	<script type="text/javascript" src="js/jquery.jec-1.3.1.js"></script>
